--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
         -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="YOUR_API_KEY" />
+            android:value="AIzaSyDMs_sBOp6Q92lTxeAPESOt8D0gWQaCv54" />
 
         <activity
             android:name=".MapsActivity"
